# project-phases-reports

./: .envrc  .gitignore  README.md  directory_tree.txt  pyproject.toml
Scratch Files/: project_params_logic.py
business-metric-report/: display_metrics.py
metrics/: display.py
reports/: configurations.py  parser.py  summary.py
resources/: date_utils.py  environ_var.py  file_object.py  lines.py  path_utils.py  project_file.py  vestigial_code.py
tests/: READEME.md  clean_sample_PROJECT_INFO.txt  clean_test_full_cycle_single_project.sh  clean_test_projects.sh  diff_snapshot.sh  get_prod_snapshot.sh  promote_projects.sh  snapshot.bash
