[tool.poetry]
name = "2023-08-23-project-visibility"
version = "0.1.0"
description = ""
authors = ["Scott Hendricskon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docx2txt = "^0.8"
uuid = "^1.30"
python-dateutil = "^2.9.0.post0"
pathlib = "^1.0.1"
pandas = "^2.3.0"
dateutils = "^0.6.12"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
